# fastapi_cookbook

./: .gitignore  Dockerfile  README.md  docker-compose-canary.yml  docker-compose.yml  enonce.ipynb  locustfile.py  main.py  nginx.conf  pyproject.toml  requirements.txt  train_model.py  tutorial.md
.devcontainer/: devcontainer.json
app/: __init__.py  celery_app.py  constants.py  data_models.py  load_model.py  main.py  monitor.py  tasks.py  train_model.py
grafana/provisioning/dashboards/: fastapi_dashboard.json
